[project]
name = "pipeline"
version = "0.1.0"
description = "Tech Twitter virality analysis pipeline"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "apify-client>=1.8.0",
    "duckdb>=1.1.0",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.5.0",
    "statsmodels>=0.14.0",
    "tqdm>=4.66.0",
    "twscrape>=0.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline"]

[tool.ruff]
line-length = 100
